tests/neg/i14367.check
-- [E007] Type Mismatch Error: tests/neg/i14367.scala:2:16 -------------------------------------------------------------
2 |val h2 = i => p(i)  // error: Found (i : Seq[Int]), Required: Int
  |                ^
  |                Found:    (i : Seq[Int])
  |                Required: Int
  |
  | longer explanation available when compiling with `-explain`
